fix(saudi): Revert the horizontal scroll fix

--- a/src/scss/saudi.scss
+++ b/src/scss/saudi.scss
@@ -147,7 +147,3 @@ img {
   position: fixed;
   z-index: -1;
 }
-
-section {
-  overflow-x: hidden;
-}
